GET_Training_SFDC/force-app/main/default/objects/Class__c/fields/ClassTeacher__c.field-meta.xml
<CustomField>
    <fullName>ClassTeacher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClassTeacher</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Classes</relationshipLabel>
    <relationshipName>Classes</relationshipName>
    <type>Lookup</type>
</CustomField>