GET_Training_SFDC/force-app/main/default/objects/Class__c/fields/Custom_Status__c.field-meta.xml
<CustomField>
    <fullName>Custom_Status__c</fullName>
    <label>Custom Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
            <value>
                <fullName>Reset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>