GET_Training_SFDC/force-app/main/default/objects/Class__c/fields/DetailedDescription__c.field-meta.xml
<CustomField>
    <fullName>DetailedDescription__c</fullName>
    <label>DetailedDescription</label>
    <type>TextArea</type>
</CustomField>