GET_Training_SFDC/force-app/main/default/objects/Class__c/fields/MaxSize__c.field-meta.xml
<CustomField>
    <fullName>MaxSize__c</fullName>
    <label>MaxSize</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>