GET_Training_SFDC/force-app/main/default/objects/Class__c/fields/NumberOfStudents__c.field-meta.xml
<CustomField>
    <fullName>NumberOfStudents__c</fullName>
    <label>NumberOfStudents</label>
    <summaryForeignKey>Student__c.Class__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>